# self_practice

./: .gitignore  README.md  sh.exe.stackdump
banana/: CMakeLists.txt
banana/banana/: banana.vcxproj  banana.vcxproj.filters
banana/banana/Debug/: vc140.idb
banana/banana/Debug/banana.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  banana.lastbuildstate
banana/banana/x64/Debug/: banana.idb  core.idb
banana/banana/x64/Debug/banana.tlog/: CL.command.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  banana.lastbuildstate  lib.command.1.tlog
banana/banana/x64/Debug/core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog
banana/msvc/: banana.sln  core.vcxproj  core.vcxproj.filters  unittest.vcxproj  unittest.vcxproj.filters
banana/msvc/examples/tcpcli/: main.cpp  packages.config  tcpcli.vcxproj
banana/msvc/examples/tcpsvr/: all.h  basic.h  core20170702-112002.22348  core20170702-130736.16600  main.cpp  packages.config  selector.h  tcpsvr.vcxproj  tcpsvr.vcxproj.filters
banana/msvc/lib/Debug/: core.lib
banana/msvc/tcpsvr/: main.cpp  tcpsvr.vcxproj
banana/msvc/tcpsvr/x64/Debug/: vc140.idb
banana/msvc/tcpsvr/x64/Debug/tcpsvr.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  tcpsvr.lastbuildstate
banana/msvc/x64/Debug/: core.idb  tcpsvr.ilk  vc140.idb
banana/msvc/x64/Debug/core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog
banana/msvc/x64/Debug/unittest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
banana/src/core/: Acceptor.cpp  Acceptor.h  Buffer.cpp  Buffer.h  CMakeLists.txt  CallBacks.h  Const.h  Epoll.cpp  Epoll.h  EventLoop.cpp  EventLoop.h  IpAddress.cpp  IpAddress.h  IpEndPoint.cpp  IpEndPoint.h  Poll.cpp  Poll.h  Select.cpp  Select.h  Socket.cpp  Socket.h  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h  Utils.h
banana/src/tests/: Buffer_unittest.cpp  CMakeLists.txt  IpAddress_unittest.cpp  main.cpp
banana/src/thridparty/googletest-master/googletest-master/googletest/msvc/: UpgradeLog.htm  UpgradeLog2.htm  gtest-md.vcxproj  gtest_main-md.vcxproj  gtest_prod_test-md.vcxproj  gtest_unittest-md.vcxproj
banana/src/thridparty/googletest-master/googletest-master/googletest/msvc/gtest/Debug/: gtest_maind.lib
banana/src/thridparty/googletest-master/googletest-master/googletest/msvc/gtest/Debug/gtest/: gtest.idb
banana/src/thridparty/googletest-master/googletest-master/googletest/msvc/gtest/Debug/gtest_main/: gtest_main.idb
banana/src/thridparty/googletest-master/googletest-master/googletest/msvc/gtest/Release/: gtest.lib  gtest_main.lib
banana/src/thridparty/googletest-master/googletest-master/googletest/msvc/x64/Debug/: gtest_main-mdd.lib  gtest_maind.lib  gtest_prod_test.ilk
banana/src/thridparty/googletest-master/googletest-master/googletest/msvc/x64/Release/: gtest_main-md.lib
banana/src/utils/: CMakeLists.txt
banana/src/utils/fmt/: format.cc  ostream.cc  posix.cc
(+121 files in other folders)
